--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-   INCLUDE_DIRS include  #uncomment
+#   INCLUDE_DIRS include  #uncomment
 #  LIBRARIES can_speed_decoder
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 CATKIN_DEPENDS message_runtime
